added order and driver swagger documentation
